--- a/views/asyncPage.handlebars
+++ b/views/asyncPage.handlebars
@@ -31,15 +31,15 @@
         <div class="row commentMetadata">
           <div class="col" style="display:flex;justify-content:space-between;">
             <div id="generalTools">
-              <button type="button" class="btn btn-link btn-sm openReplyBox  post-action-button" disabled>
+              <button type="button" class="button openReplyBox post-action-button" disabled>
                 <i class="far fa-comment"></i>
               </button>
-              <a class="btn btn-link btn-sm post-action-button" href="">
+              <a class="button post-action-button" href="">
                 <i class="fas fa-link"></i>
               </a>
             </div>
             <div id="authorTools">
-              <button type="button" class="btn btn-link btn-sm mutePost post-action-button" data-post-id="n/a" disabled>
+              <button type="button" class="button mutePost post-action-button" data-post-id="n/a" disabled>
                 <i class="far fa-bell"></i>
               </button>
             </div>
