--- a/views/communities.handlebars
+++ b/views/communities.handlebars
@@ -90,7 +90,7 @@
               <input type="file" name="imageUpload" id="image-upload" accept="image/*" />
             </div>
           </div>
-          <button id="createCommunity" type="submit" class="btn btn-primary">Create</button>
+          <button id="createCommunity" type="submit" class="button">Create</button>
         </form>
       </div>
       <div class="tab-pane fade show active" id="directory" role="tabpanel" aria-labelledby="directoryTab">
