--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -4,7 +4,7 @@
     <div id="searchHeader">
       <form class="form-inline mb-3" id="searchForm">
         <input id="searchQuery" style="flex:1" type="text" class="form-control mr-2" placeholder="Search for users, communities, and tags."/>
-        <button type="submit" class="btn btn-secondary">Search</button>
+        <button type="submit" class="button">Search</button>
       </form>
     </div>
 		<div class="container" id="resultsContainer"></div>
