--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -75,8 +75,8 @@
   			</div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="button" class="button" data-dismiss="modal">Close</button>
+        <button type="submit" class="button">Update</button>
       </div>
       </form>
     </div>
