--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -8,10 +8,10 @@
 {{#if isOwnProfile}}
   </div>
   <div class="col-6 d-flex align-items-start">
-    <div class="btn-group-vertical w-100" role="group" aria-label="Profile control buttons" id="profileControlsDesktopMobile">
-      <button type="button" class="btn btn-outline-secondary" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
-      <a href="/settings" class="btn btn-outline-secondary"><i class="fas fa-cog"></i> Settings</a>
-      <a href="/logout" class="btn btn-outline-secondary"><i class="fas fa-sign-out-alt"></i> Log out</a>
+    <div id="profileControlsDesktopMobile">
+      <button type="button" class="button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
+      <a href="/settings" class="button full-width-button"><i class="fas fa-cog"></i> Settings</a>
+      <a href="/logout" class="button full-width-button"><i class="fas fa-sign-out-alt"></i> Log out</a>
     </div>
   </div>
 </div>
@@ -24,10 +24,10 @@
   {{#if profileData.displayName }}<br /> <span class="text-muted small">{{/if}}@{{ profileData.username}}{{#if profileData.displayName }}</span>{{/if}}
 </h3>
 {{#if isOwnProfile}}
-  <div class="btn-group-vertical w-100 mb-3" role="group" aria-label="Profile control buttons" id="profileControlsTablet">
-    <button type="button" class="btn btn-outline-secondary" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
-    <a href="/settings" class="btn btn-outline-secondary"><i class="fas fa-cog"></i> Settings</a>
-    <a href="/logout" class="btn btn-outline-secondary"><i class="fas fa-sign-out-alt"></i> Log out</a>
+  <div id="profileControlsTablet">
+    <button type="button" class="button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal" style="margin-bottom: 0.5rem;"><i class="fas fa-pencil-alt"></i> Edit</button>
+    <a href="/settings" class="button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-cog"></i> Settings</a>
+    <a href="/logout" class="button full-width-button" style="margin-bottom: 0.5rem;"><i class="fas fa-sign-out-alt"></i> Log out</a>
   </div>
 {{/if}}
 {{#unless isOwnProfile}}
@@ -67,22 +67,21 @@
 {{#unless isOwnProfile}}
   {{#if loggedIn}}
     <div id="userActionsButtons" class="mb-2">
-      <div class="btn-group btn-group-sm btn-group-full-width" role="group">
         {{#if followed}}
-          <button type="button" id="unfollowButton" class="btn btn-secondary"><i class="fas fa-satellite-dish"></i> Unfollow</button>
+          <button type="button" id="unfollowButton" class="button"><i class="fas fa-satellite-dish"></i> Unfollow</button>
         {{else}}
-          <button type="button" id="followButton" class="btn btn-primary"><i class="fas fa-satellite-dish"></i> Follow</button>
+          <button type="button" id="followButton" class="button"><i class="fas fa-satellite-dish"></i> Follow</button>
         {{/if}}
         {{#if trusted}}
-          <button type="button" id="untrustButton" class="btn btn-secondary">
+          <button type="button" id="untrustButton" class="button">
             <i class="fas fa-lock"></i> Untrust
           </button>
         {{else}}
-          <button type="button" id="trustButton" class="btn btn-success">
+          <button type="button" id="trustButton" class="button">
             <i class="fas fa-lock-open"></i> Trust
           </button>
         {{/if}}
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="button dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           More
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
@@ -97,7 +96,6 @@
             <button type="button" id="muteButton" class="dropdown-item text-dark"><i class="fas fa-comment-slash"></i> Mute</button>
           {{/if}}
         </div>
-      </div>
     </div>
     {{#if numberOfFlagsFromTrustedUsers}}
       <div class="message w-100 my-2" style="text-align:center;">
