--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -162,7 +162,7 @@
                     </div>
             </div>
             <div class="pushNotifSubStuff" style="margin:20px 0;">
-                <button style="white-space:normal;" type="button" id="notifs-button" class="btn btn-secondary">Click to subscribe this browser to sweet push notifications!</button>
+                <button style="white-space:normal;" type="button" id="notifs-button" class="button lowercase-button">Click to subscribe this browser to sweet push notifications!</button>
                 <p class="form-text small">On desktop you'll get notifications while this browser is open, on Android devices just like any other social media app, and on Apple devices probably nothing because we haven't gone through their approval process yet, sorry.</p>
             </div>
             <input name="autoDetectedTimeZone" type="hidden" id="submitDetectedTimeZone" value="{{loggedInUserData.settings.autoDetectedTimeZone}}">
@@ -184,7 +184,7 @@
                             </label>
                     </div>
             </div>
-            <button type="submit" class="btn btn-secondary">Save settings</button>
+            <button type="submit" class="button">Save settings</button>
         </form>
     </div>
 </div>
