--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -9,9 +9,9 @@
   </div>
   <div class="col-6 d-flex align-items-start">
     <div id="profileControlsDesktopMobile">
-      <button type="button" class="button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
-      <a href="/settings" class="button full-width-button"><i class="fas fa-cog"></i> Settings</a>
-      <a href="/logout" class="button full-width-button"><i class="fas fa-sign-out-alt"></i> Log out</a>
+      <button type="button" class="button outline-button full-width-button" id="updateProfileButton" data-toggle="modal" data-target="#updateProfileModal"><i class="fas fa-pencil-alt"></i> Edit</button>
+      <a href="/settings" class="button outline-button full-width-button"><i class="fas fa-cog"></i> Settings</a>
+      <a href="/logout" class="button outline-button full-width-button"><i class="fas fa-sign-out-alt"></i> Log out</a>
     </div>
   </div>
 </div>
