Various color code for color variable replacements

--- a/scss/_dark-mode-colors.scss
+++ b/scss/_dark-mode-colors.scss
@@ -1,15 +1,11 @@
-$text-black: #1a1717; // Text for light mode.
-$text-white: #ffffff; // Text color for dark mode.
+$text-black: #ffffff; // Text for light mode.
 
-$background-white: #fff;
-$background-grey: #f9f9fa; // Page background
-
+$background-grey: black; // Page background
 $lightest-grey: #f3f3f3; // Form input backgrounds
 $light-grey: #efefef;
 $medium-grey: #cecece; // Post borders
-$darker-grey: #cbcbcb; // Currently only horizontal rules I think?
 $dark-grey: #aaa;
-$darkest-grey: #666; // Grey-colored text
+$darkest-grey: #666;
 
 $light-blue: #338fc2; // Links
 
