--- a/scss/dark-mode.scss
+++ b/scss/dark-mode.scss
@@ -1,10 +1,10 @@
 @import 'normalize';
-@import 'colors';
+@import 'dark-mode-colors';
 @import 'mixins';
 @import 'typography';
 @import 'layout';
-@import 'forms';
 @import 'navbar';
+@import 'forms';
 @import 'images';
 @import 'posts-comments';
 @import 'weird-bootstrap-rules';
