--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -98,7 +98,7 @@
         <h3 class="page-header mx-2">Community editor</h3>
         <div class="row">
           <div class="col-md-4">
-            <div class="nav flex-md-column nav-pills" id="nav-tab" role="tablist" aria-orientation="vertical">
+            <div class="nav" id="community-editor-tabs" role="tablist" aria-orientation="vertical">
               <a class="nav-item nav-link active" id="nav-nameEditor-tab" data-toggle="tab" href="#nav-nameEditor" role="tab" aria-controls="nav-nameEditor" aria-selected="true">Name</a>
               <a class="nav-item nav-link" id="nav-descriptionEditor-tab" data-toggle="tab" href="#nav-descriptionEditor" role="tab" aria-controls="nav-descriptionEditor" aria-selected="false">Description</a>
               <a class="nav-item nav-link" id="nav-rulesEditor-tab" data-toggle="tab" href="#nav-rulesEditor" role="tab" aria-controls="nav-rulesEditor" aria-selected="false">Rules</a>
