--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -77,7 +77,7 @@ hr {
     border-top: 1px solid;
     margin: 0.5em 0;
     padding: 0;
-    color: $darker-grey;
+    color: $dark-grey;
 }
 
 dl,
